navigation bar design addition

--- a/app/views/homepage/index.html.haml
+++ b/app/views/homepage/index.html.haml
@@ -1,5 +1,8 @@
-%div.container{style: "margin-top:50px;"}
-  %div.starter-template
+%div.first-content-wrapper
+  .container
     %h1= "Bootstrap starter template"
     %p.lead= "Use this document as a way to quickly start any new project."
     %p.lead= "All you get is this text and a mostly barebones HTML"
+%div.second-content
+  .container
+    %h1= "Bootstrap starter template"
