--- a/app/assets/stylesheets/homepage.scss
+++ b/app/assets/stylesheets/homepage.scss
@@ -1,3 +1,11 @@
 // Place all the styles related to the homepage controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.first-content-wrapper{
+  margin-top:150px;
+}
+.second-content{
+  background-color:#ffffff;
+  margin-top:380px;
+  padding-bottom:300px;
+}
