added design changes to navbar

--- a/app/assets/stylesheets/homepage.scss
+++ b/app/assets/stylesheets/homepage.scss
@@ -4,7 +4,7 @@
 .first-content-wrapper{
   margin-top:150px;
 }
-.second-content{
+.second-content-wrapper{
   background-color:#ffffff;
   margin-top:380px;
   padding-bottom:300px;
