--- a/app/views/homepage/index.html.haml
+++ b/app/views/homepage/index.html.haml
@@ -3,6 +3,7 @@
     %h1= "Bootstrap starter template"
     %p.lead= "Use this document as a way to quickly start any new project."
     %p.lead= "All you get is this text and a mostly barebones HTML"
-%div.second-content
+%div.second-content-wrapper
   .container
     %h1= "Bootstrap starter template"
+    .second-content-desc
