--- a/app/assets/stylesheets/custom-style.scss
+++ b/app/assets/stylesheets/custom-style.scss
@@ -40,7 +40,10 @@
   position: fixed;
   top:-10px;
   overflow-y:auto;
-  background-color: #545454;
+  background: -webkit-linear-gradient(#545454,#909090,#AFAFAF,#C2C2C2); /* For Safari 5.1 to 6.0 */
+  background: -o-linear-gradient(#545454,#909090,#AFAFAF,#C2C2C2); /* For Opera 11.1 to 12.0 */
+  background: -moz-linear-gradient(#545454,#909090,#AFAFAF,#C2C2C2); /* For Firefox 3.6 to 15 */
+  background: linear-gradient(#545454,#909090,#AFAFAF,#C2C2C2); /* Standard syntax (must be last) */
 }
 .navscroll-logo-container{
   width:20%;
@@ -53,7 +56,7 @@
 }
 .navscroll-content-wrapper{
   width:80%;
-  margin-top:22px;
+  margin-top:25px;
   float:right;
   font-size:15px;
   font-family: Helvetica, "Helvetica Neue", Arial, sans-serif;
