design changes to the website

--- a/app/views/homepage/index.html.haml
+++ b/app/views/homepage/index.html.haml
@@ -6,4 +6,29 @@
 %div.second-content-wrapper
   .container
     %h1= "Bootstrap starter template"
-    .second-content-desc
+    .content-sub-wrapper
+      %div.content-desc
+        %h1= "Bootstrap starter template"
+        %p.lead= "Use this document as a way to quickly start any new project.All you get is this text and a mostly barebones HTML"
+        %p.lead= "Great collaboration starts with communication.Review changes, comment on lines of code, report issues, and plan the future of your project with discussion tools."
+      %div.content-img
+        =image_tag "back-imgs8.png"
+      .clear-class
+    .content-sub-wrapper
+      %div.content-img
+        =image_tag "back-imgs3.png"
+      %div.content-desc
+        %h1= "Bootstrap starter template"
+        %p.lead= "Use this document as a way to quickly start any new project.All you get is this text and a mostly barebones HTML"
+        %p.lead= "Great collaboration starts with communication.Review changes, comment on lines of code, report issues, and plan the future of your project with discussion tools."
+      .clear-class
+%div.third-content-wrapper
+  .container
+    %h1= "Bootstrap starter template"
+    .content-sub-wrapper
+      %div.content-desc
+        %p.lead= "Use this document as a way to quickly start any new project.All you get is this text and a mostly barebones HTML"
+        %p.lead= "Great collaboration starts with communication.Review changes, comment on lines of code, report issues, and plan the future of your project with discussion tools."
+      %div.content-img
+        =image_tag "comp-logo.png"
+      .clear-class
