--- a/app/views/layouts/_navbar.html.haml
+++ b/app/views/layouts/_navbar.html.haml
@@ -31,7 +31,7 @@
 %nav#navbar.navbar-container
   .container
     #navbar-logo.logo-container
-      =image_tag "ps-logo.jpg", class: "logo"
+      =image_tag "comp-logo.png", class: "logo"
     #navbar-content.nav-content-wrapper
       %ul.navbar-ul
         %li
