--- a/app/assets/stylesheets/custom-style.scss
+++ b/app/assets/stylesheets/custom-style.scss
@@ -21,13 +21,14 @@
       a{
         padding:7px;
         font-weight:700;
+        color: #433F40;
       }
       a.active{
         border-bottom: 2px solid #ddd;
       }
       a:hover{
         text-decoration:none;
-        background-color: #337ab7;
+        background-color: #433F40;
         color:#ffffff;
         border-bottom: 2px solid #ddd;
       }
@@ -40,10 +41,13 @@
   position: fixed;
   top:-10px;
   overflow-y:auto;
-  background: -webkit-linear-gradient(#545454,#909090,#AFAFAF,#C2C2C2); /* For Safari 5.1 to 6.0 */
-  background: -o-linear-gradient(#545454,#909090,#AFAFAF,#C2C2C2); /* For Opera 11.1 to 12.0 */
-  background: -moz-linear-gradient(#545454,#909090,#AFAFAF,#C2C2C2); /* For Firefox 3.6 to 15 */
-  background: linear-gradient(#545454,#909090,#AFAFAF,#C2C2C2); /* Standard syntax (must be last) */
+  background: -webkit-linear-gradient(#545454,#AFAFAF,#C2C2C2,#DDDDDD,#FFFFFF); /* For Safari 5.1 to 6.0 */
+  background: -o-linear-gradient(#545454,#AFAFAF,#C2C2C2,#DDDDDD,#FFFFFF); /* For Opera 11.1 to 12.0 */
+  background: -moz-linear-gradient(#545454,#AFAFAF,#C2C2C2,#DDDDDD,#FFFFFF); /* For Firefox 3.6 to 15 */
+  background: linear-gradient(#545454,#AFAFAF,#C2C2C2,#DDDDDD,#FFFFFF); /* Standard syntax (must be last) */
+  -webkit-box-shadow: 0px 0px 8px 2px #DDDDDD;
+  -moz-box-shadow: 0px 0px 8px 2px #DDDDDD;
+  box-shadow: 0px 0px 8px 2px #DDDDDD;
 }
 .navscroll-logo-container{
   width:20%;
@@ -69,15 +73,16 @@
       a{
         padding:7px;
         font-weight:700;
+        color:#433F40;
       }
       a.active{
-        background-color: #337ab7;
-        color:#ddd;
+        background-color: #433F40;
+        color:#ffffff;
       }
       a:hover{
         text-decoration:none;
-        background-color: #337ab7;
-        color:#ddd;
+        background-color: #433F40;
+        color:#ffffff;
       }
     }
   }
