--- a/app/assets/stylesheets/homepage.scss
+++ b/app/assets/stylesheets/homepage.scss
@@ -8,4 +8,29 @@
   background-color:#ffffff;
   margin-top:380px;
   padding-bottom:300px;
+  .container h1{
+    color:#0272a7;
+    text-align:center;
+    margin-top:100px;
+  }
+  .content-sub-wrapper{
+//    background-color: #ddd;
+    margin-top:50px;
+    .content-desc{
+      width: 50%;
+      float:left;
+    }
+    .content-img{
+      width:50%;
+      float:left;
+//      background-color: #555555;
+      img{
+        width:500px;
+        height:500px;
+      }
+    }
+  }
+}
+.third-content-wrapper{
+  padding-bottom:600px;
 }
