--- a/app/views/homepage/index.html.haml
+++ b/app/views/homepage/index.html.haml
@@ -1,11 +1,12 @@
 %div.first-content-wrapper
   .container
-    %h1= "Bootstrap starter template"
-    %p.lead= "Use this document as a way to quickly start any new project."
-    %p.lead= "All you get is this text and a mostly barebones HTML"
+    %div.jumbotron
+      %h1= "Bootstrap starter template"
+      %p.lead= "All you get is this text and a mostly barebones HTML"
 %div.second-content-wrapper
   .container
-    %h1= "Bootstrap starter template"
+    %div.page-header
+      %h1= "Bootstrap starter template"
     .content-sub-wrapper
       %div.content-desc
         %h1= "Bootstrap starter template"
