--- a/app/assets/stylesheets/custom-style.scss
+++ b/app/assets/stylesheets/custom-style.scss
@@ -22,13 +22,15 @@
         padding:7px;
         font-weight:700;
         color: #433F40;
+        text-decoration:none;
       }
       a.active{
-        border-bottom: 2px solid #ddd;
+        border-bottom: 2px solid #0272a7;
+        text-decoration:none;
       }
       a:hover{
         text-decoration:none;
-        border-bottom: 2px solid #ddd;
+        border-bottom: 2px solid #0272a7;
       }
     }
   }
@@ -39,10 +41,11 @@
   position: fixed;
   top:-10px;
   overflow-y:auto;
-  background: -webkit-linear-gradient(#545454,#AFAFAF,#C2C2C2,#DDDDDD,#FFFFFF); /* For Safari 5.1 to 6.0 */
-  background: -o-linear-gradient(#545454,#AFAFAF,#C2C2C2,#DDDDDD,#FFFFFF); /* For Opera 11.1 to 12.0 */
-  background: -moz-linear-gradient(#545454,#AFAFAF,#C2C2C2,#DDDDDD,#FFFFFF); /* For Firefox 3.6 to 15 */
-  background: linear-gradient(#545454,#AFAFAF,#C2C2C2,#DDDDDD,#FFFFFF); /* Standard syntax (must be last) */
+//  background: -webkit-linear-gradient(#F7E8D5,#F6F5F0,#FFFFFF); /* For Safari 5.1 to 6.0 */
+//  background: -o-linear-gradient(#F7E8D5,#F6F5F0,#FFFFFF); /* For Opera 11.1 to 12.0 */
+//  background: -moz-linear-gradient(#F7E8D5,#F6F5F0,#FFFFFF); /* For Firefox 3.6 to 15 */
+//  background: linear-gradient(#F7E8D5,#F6F5F0,#FFFFFF); /* Standard syntax (must be last) */
+  background-color:#F6F5F0;
   -webkit-box-shadow: 0px 0px 8px 2px #DDDDDD;
   -moz-box-shadow: 0px 0px 8px 2px #DDDDDD;
   box-shadow: 0px 0px 8px 2px #DDDDDD;
