major design changes in homepage design

--- a/app/assets/stylesheets/homepage.scss
+++ b/app/assets/stylesheets/homepage.scss
@@ -12,10 +12,48 @@
 .second-content-wrapper{
   background-color:#FFFFFF;
   margin-top:350px;
-  padding-bottom:300px;
+  padding-bottom:50px;
+  .custom-second-header-design{
+    padding-bottom: 60px;
+    p{
+      background-color:#F6F5F0;
+      text-align:center;
+      font-size:36px;
+      font-weight:bold;
+      font-family: 'PT Sans Narrow', sans-serif;
+      text-transform:capitalize;
+      color:#0272a7;
+      -webkit-box-shadow: 0px 0px 8px 2px #DDDDDD;
+      -moz-box-shadow: 0px 0px 8px 2px #DDDDDD;
+      box-shadow: 0px 0px 8px 2px #DDDDDD;
+    }
+  }
+  .custom-second-header-design1{
+    p{
+      width:100%;
+      position: fixed;
+      top:-10px;
+      overflow-y:auto;
+      background: -webkit-linear-gradient(#ffffff, #eeeeee 50%, #F6F5F0); /* For Safari 5.1 to 6.0 */
+      background: -o-linear-gradient(#ffffff, #eeeeee 50%, #F6F5F0); /* For Opera 11.1 to 12.0 */
+      background: -moz-linear-gradient(#ffffff, #eeeeee 50%, #F6F5F0); /* For Firefox 3.6 to 15 */
+      background: linear-gradient(#ffffff, #eeeeee 50%, #F6F5F0); /* Standard syntax (must be last) */
+      //  background-image: linear-gradient(#484e55, #3a3f44 60%, #313539);
+      //  background-color:#F6F5F0;
+      -webkit-box-shadow: 0px 0px 8px 2px #DDDDDD;
+      -moz-box-shadow: 0px 0px 8px 2px #DDDDDD;
+      box-shadow: 0px 0px 8px 2px #DDDDDD;
+    }
+  }
   .jumbotron{
-    margin-top:50px;
+    margin-top:10px;
     padding-bottom:250px;
+    .col-md-4{
+      position:static;
+    }
+    .col-md-8{
+      position:static;
+    }
   }
   .container h1{
     color:#0272a7;
@@ -44,14 +82,46 @@
 .third-content-wrapper{
   background-color:#F6F5F0;
   padding-bottom: 300px;
+  margin-top:175px;
   .jumbotron{
-    margin-top:50px;
+    margin-top:10px;
+  }
+  .custom-third-header-design{
+    padding-bottom: 60px;
+    p{
+      background-color:#FFFFFF;
+      text-align:center;
+      font-size:36px;
+      font-weight:bold;
+      font-family: 'PT Sans Narrow', sans-serif;
+      text-transform:capitalize;
+      color:#5cb85c;
+      -webkit-box-shadow: 0px 0px 8px 2px #DDDDDD;
+      -moz-box-shadow: 0px 0px 8px 2px #DDDDDD;
+      box-shadow: 0px 0px 8px 2px #DDDDDD;
+    }
   }
 }
 .fourth-content-wrapper{
-  background-color:#151515;
+  background-color:#FFFFFF;
   padding-bottom: 300px;
+  margin-top:175px;
   .jumbotron{
-    margin-top:50px;
+    margin-top:10px;
+  }
+  .custom-fourth-header-design{
+    padding-bottom: 60px;
+    p{
+      background-color:#F6F5F0;
+      text-align:center;
+      font-size:36px;
+      font-weight:bold;
+      font-family: 'PT Sans Narrow', sans-serif;
+      text-transform:capitalize;
+      color:#151515;
+      -webkit-box-shadow: 0px 0px 8px 2px #DDDDDD;
+      -moz-box-shadow: 0px 0px 8px 2px #DDDDDD;
+      box-shadow: 0px 0px 8px 2px #DDDDDD;
+    }
   }
 }
