--- a/app/assets/stylesheets/custom-style.scss
+++ b/app/assets/stylesheets/custom-style.scss
@@ -14,6 +14,7 @@
   font-family: Helvetica, "Helvetica Neue", Arial, sans-serif;
   .navbar-ul{
     margin-left:35%;
+    -moz-margin-start:34%;
     li{
       float:left;
       padding-left:20px;
@@ -41,11 +42,12 @@
   position: fixed;
   top:-10px;
   overflow-y:auto;
-//  background: -webkit-linear-gradient(#F7E8D5,#F6F5F0,#FFFFFF); /* For Safari 5.1 to 6.0 */
-//  background: -o-linear-gradient(#F7E8D5,#F6F5F0,#FFFFFF); /* For Opera 11.1 to 12.0 */
-//  background: -moz-linear-gradient(#F7E8D5,#F6F5F0,#FFFFFF); /* For Firefox 3.6 to 15 */
-//  background: linear-gradient(#F7E8D5,#F6F5F0,#FFFFFF); /* Standard syntax (must be last) */
-  background-color:#F6F5F0;
+  background: -webkit-linear-gradient(#ffffff, #eeeeee 50%, #F6F5F0); /* For Safari 5.1 to 6.0 */
+  background: -o-linear-gradient(#ffffff, #eeeeee 50%, #F6F5F0); /* For Opera 11.1 to 12.0 */
+  background: -moz-linear-gradient(#ffffff, #eeeeee 50%, #F6F5F0); /* For Firefox 3.6 to 15 */
+  background: linear-gradient(#ffffff, #eeeeee 50%, #F6F5F0); /* Standard syntax (must be last) */
+//  background-image: linear-gradient(#484e55, #3a3f44 60%, #313539);
+//  background-color:#F6F5F0;
   -webkit-box-shadow: 0px 0px 8px 2px #DDDDDD;
   -moz-box-shadow: 0px 0px 8px 2px #DDDDDD;
   box-shadow: 0px 0px 8px 2px #DDDDDD;
@@ -67,6 +69,7 @@
   font-family: Helvetica, "Helvetica Neue", Arial, sans-serif;
   .navbar-ul{
     margin-left:35%;
+    -moz-margin-start:34%;
     li{
       float:left;
       padding-left:20px;
