--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -14,6 +14,7 @@
             -#[if lt IE 9]
           %script{src: "https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"}
           %script{src: "https://oss.maxcdn.com/respond/1.4.2/respond.min.js"}
+          %link{:href => "http://fonts.googleapis.com/css?family=PT+Sans+Narrow", :rel => "stylesheet", :type => "text/css"}
   %body
     = render partial: "layouts/navbar.html.haml"
     = yield
