--- a/app/views/homepage/index.html.haml
+++ b/app/views/homepage/index.html.haml
@@ -15,27 +15,22 @@
       %h1= "Bootstrap starter template"
       %p.lead= "All you get is this text and a mostly barebones HTML"
 %div.second-content-wrapper
-  #custom-navtab-pos.custom-second-header-design
+  .custom-second-header-design
     %p= "BOOTSTRAP US"
   .container
-    %div.jumbotron
-      .col-md-4
-        %a.thumbnail
-          =image_tag "background-img.jpg"
-      .col-md-8
-        %p.lead= "All you get is this text and a mostly barebones HTML"
-    %div.jumbotron
-      .col-md-8
-        %p.lead= "All you get is this text and a mostly barebones HTML"
-      .col-md-4
-        %a.thumbnail
-          =image_tag "background-img.jpg"
-    %div.jumbotron
-      .col-md-4
-        %a.thumbnail
-          =image_tag "background-img.jpg"
-      .col-md-8
-        %p.lead= "All you get is this text and a mostly barebones HTML"
+    .col-md-4
+      %a.thumbnail
+        =image_tag "background-img.jpg"
+    .col-md-4
+      %a.thumbnail
+        =image_tag "background-img.jpg"
+    .col-md-4
+      %a.thumbnail
+        =image_tag "background-img.jpg"
+
+    .col-md-12{style: "background-color:#f1f1f1;"}
+      %p.lead= "All you get is this text and a mostly barebones HTML,All you get is this text and a mostly barebones HTML,All you get is this text and a mostly barebones HTML,All you get is this text and a mostly barebones HTML,All you get is this text and a mostly barebones HTML,All you get is this text and a mostly barebones HTML,All you get is this text and a mostly barebones HTML"
+
 %div.third-content-wrapper
   .custom-third-header-design
     %p= "BOOTSTRAP US"
