--- a/app/views/layouts/_navbar.html.haml
+++ b/app/views/layouts/_navbar.html.haml
@@ -37,11 +37,11 @@
         %li
           %a{href: "#about",class: "active"} HOME
         %li
-          %a{href: "#about"} ABOUT
-        %li
           %a{href: "#about"} WHAT WE DO
         %li
           %a{href: "#about"} PRODUCTS
+        %li
+          %a{href: "#about"} ABOUT US
         %li
           %a{href: "#about"} CONTACT US
     .clear-class
