--- a/app/views/homepage/index.html.haml
+++ b/app/views/homepage/index.html.haml
@@ -1,23 +1,3 @@
-:javascript
-  function display_hidden_content(block_value){
-    var content_value = block_value;
-    if(content_value == "first-content-show-hide"){
-      $('#content-one').show().stop().fadeIn('slow', 0.6);
-      $('#content-two').hide();
-      $('#content-three').hide();
-    }
-    else if(content_value == "second-content-show-hide"){
-      $('#content-one').hide();
-      $('#content-two').show();
-      $('#content-three').hide();
-    }
-    else if(content_value == "third-content-show-hide"){
-      $('#content-one').hide();
-      $('#content-two').hide();
-      $('#content-three').show();
-    }
-  }
-
 %div.first-content-wrapper
   .container
     %div.jumbotron
@@ -29,24 +9,22 @@
       %p= "BOOTSTRAP US"
   .content-container
     .container
-      .col-md-4
-        %a.thumbnail
-          =image_tag "back-imgs3.png", id: "first-content-show-hide", onmouseover: "display_hidden_content(this.id);"
-      .col-md-4
-        %a.thumbnail
-          =image_tag "back-imgs4.png", id: "second-content-show-hide", onmouseover: "display_hidden_content(this.id);"
-      .col-md-4
-        %a.thumbnail
-          =image_tag "back-imgs5.png", id: "third-content-show-hide", onmouseover: "display_hidden_content(this.id);"
-
-      .col-md-12
-        %ul
-          %li
-            %p.lead{style:"display:show;", id: "content-one" }= "All you get is this text and a mostly barebones HTML,All you get is this text and a mostly barebones HTML,All you get is this text and a mostly barebones HTML,All you get is this text and a mostly barebones HTML,All you get is this text and a mostly barebones HTML,All you get is this text and a mostly barebones HTML,All you get is this text and a mostly barebones HTML"
-          %li
-            %p.lead{style:"display:none;", id: "content-two" }= "barebones HTML,All you get is this text and a mostly barebones HTML,All you get is this text and a mostly barebones HTML,All you get is this text and a mostly barebones HTML,All you get is this text and a mostly barebones HTML,All you get is this text and a mostly barebones HTML,All you get is this text and a mostly barebones HTML"
-          %li
-            %p.lead{style:"display:none;", id: "content-three" }= "HTML,All you get is this text and a mostly barebones HTML,All you get is this text and a mostly barebones HTML,All you get is this text and a mostly barebones HTML,All you get is this text and a mostly barebones HTML,All you get is this text and a mostly barebones HTML,All you get is this text and a mostly barebones HTML"
+      .row
+        .col-md-4
+          %a.thumbnail
+            =image_tag "back-imgs3.png"
+          %h3= "Content Header 1"
+          %p.lead= "All you get is this text and a mostly barebones HTML,All you get is this text and a mostly barebones HTML,All you get is this text and a mostly barebones HTML,All you get is this text and a mostly barebones HTML,All you get is this text and a mostly barebones HTML,All you get is this text and a mostly barebones HTML,All you get is this text and a mostly barebones HTML"
+        .col-md-4
+          %a.thumbnail
+            =image_tag "back-imgs4.png"
+          %h3= "Content Header 1"
+          %p.lead= "barebones HTML,All you get is this text and a mostly barebones HTML,All you get is this text and a mostly barebones HTML,All you get is this text and a mostly barebones HTML,All you get is this text and a mostly barebones HTML,All you get is this text and a mostly barebones HTML,All you get is this text and a mostly barebones HTML"
+        .col-md-4
+          %a.thumbnail
+            =image_tag "back-imgs5.png"
+          %h3= "Content Header 1"  
+          %p.lead= "HTML,All you get is this text and a mostly barebones HTML,All you get is this text and a mostly barebones HTML,All you get is this text and a mostly barebones HTML,All you get is this text and a mostly barebones HTML,All you get is this text and a mostly barebones HTML,All you get is this text and a mostly barebones HTML"
 
 %div.third-content-wrapper
   .container
