--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -14,9 +14,10 @@
             -#[if lt IE 9]
           %script{src: "https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"}
           %script{src: "https://oss.maxcdn.com/respond/1.4.2/respond.min.js"}
+          %script{:src => "https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"}
+          %script{:src => "http://code.jquery.com/ui/1.11.4/jquery-ui.js"}
           %link{:href => "http://fonts.googleapis.com/css?family=PT+Sans+Narrow", :rel => "stylesheet", :type => "text/css"}
   %body
     = render partial: "layouts/navbar.html.haml"
     = yield
     -#jQuery (necessary for Bootstrap's JavaScript plugins)
-    %script{:src => "https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"}
