--- a/app/assets/stylesheets/homepage.scss
+++ b/app/assets/stylesheets/homepage.scss
@@ -35,17 +35,43 @@
       color: #0272a7;
       padding: 60px;
       border-radius: 6px;
-      .col-md-4 {
+      h1{
+        background: -webkit-linear-gradient(#ffffff, #eeeeee 50%, #F6F5F0); /* For Safari 5.1 to 6.0 */
+        background: -o-linear-gradient(#ffffff, #eeeeee 50%, #F6F5F0); /* For Opera 11.1 to 12.0 */
+        background: -moz-linear-gradient(#ffffff, #eeeeee 50%, #F6F5F0); /* For Firefox 3.6 to 15 */
+        background: linear-gradient(#ffffff, #eeeeee 50%, #F6F5F0); /* Standard syntax (must be last) */
+        margin:0px;
+        padding:10px;
+        text-align:center;
+      }
+      .col-md-12{
+        background-color:#FFFFFF;
+        padding-left:15px;
+        padding-right:15px;
         position: static;
-        .thumbnail{
-          border:none;
+        .col-md-4 {
+          position: static;
+          padding-top: 15px;
+          .thumbnail {
+            border: none;
+            padding:0px;
+            -webkit-box-shadow:none;
+            box-shadow:none;
+          }
         }
-        h3{
-          text-align:center;
-          background-color:#FFFFFF;
-        }
-        p{
-          background-color:#DDDDDD;
+        .col-md-8{
+          position: static;
+          border-radius:4px;
+          padding-top: 15px;
+          padding-left: 0px;
+          padding-right: 0px;
+          h3{
+            text-align:center;
+            margin:0px;
+          }
+          p{
+            padding:10px;
+          }
         }
       }
     }
@@ -89,6 +115,26 @@
       -webkit-box-shadow: 0px 0px 8px 2px #DDDDDD;
       -moz-box-shadow: 0px 0px 8px 2px #DDDDDD;
       box-shadow: 0px 0px 8px 2px #DDDDDD;
+    }
+  }
+  .container{
+    .col-md-6 {
+      padding: 0px;
+      margin: 0px;
+      position: static;
+      img{
+        width:100%;
+        height:400px;
+      }
+    }
+    .col-md-4 {
+      padding: 0px;
+      margin: 0px;
+      position: static;
+      img{
+        width:100%;
+        height:275px;
+      }
     }
   }
 }
