--- a/app/views/homepage/index.html.haml
+++ b/app/views/homepage/index.html.haml
@@ -10,30 +10,62 @@
   .content-container
     .container
       .row
-        .col-md-4
-          %a.thumbnail
-            =image_tag "back-imgs3.png"
-          %h3= "Content Header 1"
-          %p.lead= "All you get is this text and a mostly barebones HTML,All you get is this text and a mostly barebones HTML,All you get is this text and a mostly barebones HTML,All you get is this text and a mostly barebones HTML,All you get is this text and a mostly barebones HTML,All you get is this text and a mostly barebones HTML,All you get is this text and a mostly barebones HTML"
-        .col-md-4
-          %a.thumbnail
-            =image_tag "back-imgs4.png"
-          %h3= "Content Header 1"
-          %p.lead= "barebones HTML,All you get is this text and a mostly barebones HTML,All you get is this text and a mostly barebones HTML,All you get is this text and a mostly barebones HTML,All you get is this text and a mostly barebones HTML,All you get is this text and a mostly barebones HTML,All you get is this text and a mostly barebones HTML"
-        .col-md-4
-          %a.thumbnail
-            =image_tag "back-imgs5.png"
-          %h3= "Content Header 1"  
-          %p.lead= "HTML,All you get is this text and a mostly barebones HTML,All you get is this text and a mostly barebones HTML,All you get is this text and a mostly barebones HTML,All you get is this text and a mostly barebones HTML,All you get is this text and a mostly barebones HTML,All you get is this text and a mostly barebones HTML"
+        %h1= "Content Header 1"
+        .col-md-12
+          .col-md-4
+            .thumbnail
+              =image_tag "sliderimg1.jpg",class: "img-rounded"
+          .col-md-8
+            %p.lead= "All you get is this text and a mostly barebones HTML,All you get is this text and a mostly barebones HTML,All you get is this text and a mostly barebones HTML,All you get is this text and a mostly barebones HTML,All you get is this text and a mostly barebones HTML,All you get is this text and a mostly barebones HTML,All you get is this text and a mostly barebones HTML"
+      .row
+        %h1= "Content Header 1"
+        .col-md-12
+          .col-md-4
+            .thumbnail
+              =image_tag "sliderimg2.jpg",class: "img-rounded"
+          .col-md-8
+            %p.lead= "barebones HTML,All you get is this text and a mostly barebones HTML,All you get is this text and a mostly barebones HTML,All you get is this text and a mostly barebones HTML,All you get is this text and a mostly barebones HTML,All you get is this text and a mostly barebones HTML,All you get is this text and a mostly barebones HTML"
+      .row
+        %h1= "Content Header 1"
+        .col-md-12
+          .col-md-4
+            .thumbnail
+              =image_tag "sliderimg8.jpg",class: "img-rounded"
+          .col-md-8
+            %p.lead= "HTML,All you get is this text and a mostly barebones HTML,All you get is this text and a mostly barebones HTML,All you get is this text and a mostly barebones HTML,All you get is this text and a mostly barebones HTML,All you get is this text and a mostly barebones HTML,All you get is this text and a mostly barebones HTML"
 
 %div.third-content-wrapper
   .container
     .custom-header-three
       %p= "BOOTSTRAP US"
   .container
-    %div.jumbotron
-      %h1= "Bootstrap starter template"
-      %p.lead= "All you get is this text and a mostly barebones HTML"
+    .row
+      .col-md-6
+        =image_tag "sliderimg1.jpg", class: "img-responsive"
+      .col-md-6
+        =image_tag "sliderimg5.jpg",class: "img-responsive"
+    .row
+      .col-md-4
+        =image_tag "sliderimg2.jpg",class: "img-responsive"
+      .col-md-4
+        =image_tag "sliderimg7.jpg",class: "img-responsive"
+      .col-md-4
+        =image_tag "sliderimg8.jpg",class: "img-responsive"
+  -#.container
+  -#  .row
+  -#    .col-md-6
+  -#      .col-md-2
+  -#        =image_tag "sliderimg3.jpg"
+  -#      .col-md-4
+  -#        =image_tag "sliderimg7.jpg"
+  -#    .col-md-6
+  -#      .col-md-2
+  -#        =image_tag "sliderimg8.jpg"
+  -#      .col-md-4
+  -#        =image_tag "sliderimg1.jpg"
+    -#%div.jumbotron
+    -#  %h1= "Bootstrap starter template"
+    -#  %p.lead= "All you get is this text and a mostly barebones HTML"
 %div.fourth-content-wrapper
   .container
     .custom-header-four
