--- a/app/assets/stylesheets/homepage.scss
+++ b/app/assets/stylesheets/homepage.scss
@@ -10,73 +10,42 @@
   }
 }
 .second-content-wrapper{
-  background-color:#FFFFFF;
+  background-color:#FAFAFA;
   margin-top:350px;
   padding-bottom:50px;
   .custom-header-two{
     padding-bottom: 60px;
     margin-top:40px;
+    .page-header{
+      border-bottom: 1px solid #0272a7;
+    }
     p{
-      background-color:#F6F5F0;
       text-align:center;
       font-size:36px;
       font-weight:bold;
       font-family: 'PT Sans Narrow', sans-serif;
       text-transform:capitalize;
       color:#0272a7;
-      -webkit-box-shadow: 0px 0px 8px 2px #DDDDDD;
-      -moz-box-shadow: 0px 0px 8px 2px #DDDDDD;
-      box-shadow: 0px 0px 8px 2px #DDDDDD;
     }
   }
   .content-container {
     .container {
-      background-color: #F6F5F0;
       color: #0272a7;
-      padding: 60px;
       border-radius: 6px;
-      .row{
-        margin-bottom:20px;
-        -webkit-box-shadow: 0px 0px 8px 2px #DDDDDD;
-        -moz-box-shadow: 0px 0px 8px 2px #DDDDDD;
-        box-shadow: 0px 0px 8px 2px #DDDDDD;
-      }
-      h1{
-        background: -webkit-linear-gradient(#ffffff, #eeeeee 50%, #F6F5F0); /* For Safari 5.1 to 6.0 */
-        background: -o-linear-gradient(#ffffff, #eeeeee 50%, #F6F5F0); /* For Opera 11.1 to 12.0 */
-        background: -moz-linear-gradient(#ffffff, #eeeeee 50%, #F6F5F0); /* For Firefox 3.6 to 15 */
-        background: linear-gradient(#ffffff, #eeeeee 50%, #F6F5F0); /* Standard syntax (must be last) */
+      h3{
         margin:0px;
         padding:10px;
         text-align:center;
       }
-      .col-md-12{
-        background-color:#FFFFFF;
-        padding-left:15px;
-        padding-right:15px;
+      .col-md-4 {
         position: static;
-        .col-md-4 {
-          position: static;
-          padding-top: 15px;
-          .thumbnail {
-            border: none;
-            padding:0px;
-            -webkit-box-shadow:none;
-            box-shadow:none;
-          }
-        }
-        .col-md-8{
-          position: static;
-          border-radius:4px;
-          padding-top: 15px;
-          padding-left: 0px;
-          padding-right: 0px;
-          h3{
-            text-align:center;
-            margin:0px;
-          }
-          p{
-            padding:10px;
+        .thumbnail {
+          padding:8px;
+          -webkit-box-shadow: 0px 0px 8px 2px #DDDDDD;
+          -moz-box-shadow: 0px 0px 8px 2px #DDDDDD;
+          box-shadow: 0px 0px 8px 2px #DDDDDD;
+          img{
+            height:261px;
           }
         }
       }
@@ -102,7 +71,7 @@
   }
 }
 .third-content-wrapper{
-  background-color:#F6F5F0;
+  background-color:#413F40;
   padding-bottom: 50px;
   .jumbotron{
     margin-top:10px;
@@ -111,41 +80,48 @@
     padding-bottom: 60px;
     margin-top:40px;
     p{
-      background-color:#FFFFFF;
       text-align:center;
       font-size:36px;
       font-weight:bold;
       font-family: 'PT Sans Narrow', sans-serif;
       text-transform:capitalize;
-      color:#5cb85c;
-      -webkit-box-shadow: 0px 0px 8px 2px #DDDDDD;
-      -moz-box-shadow: 0px 0px 8px 2px #DDDDDD;
-      box-shadow: 0px 0px 8px 2px #DDDDDD;
+      color:#FAFAFA;
     }
   }
   .container{
-    .col-md-6 {
-      padding: 0px;
-      margin: 0px;
+    .col-md-12{
       position: static;
-      img{
-        width:100%;
-        height:400px;
+      .col-md-6 {
+        padding: 0px;
+        margin: 0px;
+        position: static;
+        .thumbnail{
+          margin:0px;
+          border-radius:0px;
+          img{
+            width:100%;
+            height:400px;
+          }
+        }
       }
-    }
-    .col-md-4 {
-      padding: 0px;
-      margin: 0px;
-      position: static;
-      img{
-        width:100%;
-        height:275px;
+      .col-md-4 {
+        padding: 0px;
+        margin: 0px;
+        position: static;
+        .thumbnail {
+          margin: 0px;
+          border-radius: 0px;
+          img{
+            width:100%;
+            height:275px;
+          }
+        }
       }
     }
   }
 }
 .fourth-content-wrapper{
-  background-color:#FFFFFF;
+  background-color:#FAFAFA;
   padding-bottom: 50px;
   .jumbotron{
     margin-top:10px;
@@ -153,17 +129,16 @@
   .custom-header-four{
     padding-bottom: 60px;
     margin-top:40px;
+    .page-header{
+      border-bottom: 1px solid #413F40;
+    }
     p{
-      background-color:#F6F5F0;
       text-align:center;
       font-size:36px;
       font-weight:bold;
       font-family: 'PT Sans Narrow', sans-serif;
       text-transform:capitalize;
-      color:#151515;
-      -webkit-box-shadow: 0px 0px 8px 2px #DDDDDD;
-      -moz-box-shadow: 0px 0px 8px 2px #DDDDDD;
-      box-shadow: 0px 0px 8px 2px #DDDDDD;
+      color:#413F40;
     }
   }
 }
