change in content design

--- a/app/views/homepage/index.html.haml
+++ b/app/views/homepage/index.html.haml
@@ -64,6 +64,4 @@
       .page-header
         %p= "BOOTSTRAP US"
   .container
-    %div.jumbotron
-      %h1= "Bootstrap starter template"
-      %p.lead= "All you get is this text and a mostly barebones HTML"
+    %p.lead= "All you get is this text and a mostly barebones HTML,All you get is this text and a mostly barebones HTML,All you get is this text and a mostly barebones HTML,All you get is this text and a mostly barebones HTML,All you get is this text and a mostly barebones HTML,All you get is this text and a mostly barebones HTML,All you get is this text and a mostly barebones HTML"
