--- a/app/assets/stylesheets/custom-style.scss
+++ b/app/assets/stylesheets/custom-style.scss
@@ -1,14 +1,19 @@
 .navbar-container{
-  margin-top:20px;
+  padding-top:20px;
+  padding-bottom:10px;
   width:100%;
   position: fixed;
   top:-10px;
   overflow-y:auto;
+//  background: -webkit-linear-gradient(#ffffff, #eeeeee 50%, #F6F5F0); /* For Safari 5.1 to 6.0 */
+//  background: -o-linear-gradient(#ffffff, #eeeeee 50%, #F6F5F0); /* For Opera 11.1 to 12.0 */
+//  background: -moz-linear-gradient(#ffffff, #eeeeee 50%, #F6F5F0); /* For Firefox 3.6 to 15 */
+//  background: linear-gradient(#ffffff, #eeeeee 50%, #F6F5F0); /* Standard syntax (must be last) */
 }
 
 .nav-content-wrapper{
   width:80%;
-  margin-top:50px;
+  margin-top:30px;
   float:right;
   font-size:15px;
   font-family: Helvetica, "Helvetica Neue", Arial, sans-serif;
@@ -48,9 +53,9 @@
   background: linear-gradient(#ffffff, #eeeeee 50%, #F6F5F0); /* Standard syntax (must be last) */
 //  background-image: linear-gradient(#484e55, #3a3f44 60%, #313539);
 //  background-color:#F6F5F0;
-  -webkit-box-shadow: 0px 0px 8px 2px #DDDDDD;
-  -moz-box-shadow: 0px 0px 8px 2px #DDDDDD;
-  box-shadow: 0px 0px 8px 2px #DDDDDD;
+  -webkit-box-shadow: 0px 8px 4px -6px #888888;
+  -moz-box-shadow: 0px 8px 4px -6px #888888;
+  box-shadow: 0px 8px 4px -6px #888888;
 }
 .navscroll-logo-container{
   width:20%;
