--- a/app/views/homepage/index.html.haml
+++ b/app/views/homepage/index.html.haml
@@ -1,16 +1,41 @@
 :javascript
   $(document).ready(function(){
     $("#large-img-one").mouseover(function(){
-      $("#content-desc-one").show();
+      $("#content-desc-one").slideDown(1000);
     });
     $("#large-img-two").mouseover(function(){
-      $("#content-desc-two").show();
+      $("#content-desc-two").slideDown(1000);
+    });
+    $("#medium-img-one").mouseover(function(){
+      $("#medium-img-content-desc-one").slideDown(1000);
+    });
+    $("#medium-img-two").mouseover(function(){
+      $("#medium-img-content-desc-two").slideDown(1000);
+    });
+    $("#medium-img-three").mouseover(function(){
+      $("#medium-img-content-desc-three").slideDown(1000);
     });
     $("#large-img-one").mouseout(function(){
-      $("#content-desc-one").hide();
+      $("#content-desc-one").slideUp(400);
     });
     $("#large-img-two").mouseout(function(){
-      $("#content-desc-two").hide();
+      $("#content-desc-two").slideUp(400);
+    });
+    $("#medium-img-one").mouseout(function(){
+      $("#medium-img-content-desc-one").slideUp(400);
+    });
+    $("#medium-img-two").mouseout(function(){
+      $("#medium-img-content-desc-two").slideUp(400);
+    });
+    $("#medium-img-three").mouseout(function(){
+      $("#medium-img-content-desc-three").slideUp(400);
+    });
+    $(document).scroll(function(){
+      var scrollval = $(document).scrollTop();
+      if(scrollval = "506")
+      {
+        $("#slide-header-two-content-three").slideDown(2000);
+      }
     });
   });
 
@@ -27,21 +52,21 @@
   .content-container
     .container
       .row
-        .col-sm-6.col-md-4
+        .col-sm-6.col-md-4{style: "display:none",id: "slide-header-two-content-one"}
           .thumbnail
             =image_tag "sliderimg1.jpg",class: "img-rounded"
             .caption
               .page-header
                 %h3= "Thumbnail Content"
               %p= "All you get is this text and a mostly barebones HTML,All you get is this text and a mostly barebones HTML,All you get is this text and a mostly barebones HTML,All you get is this text and a mostly barebones HTML,All you get is this text and a mostly barebones HTML,All you get is this text and a mostly barebones HTML,All you get is this text and a mostly barebones HTML"
-        .col-sm-6.col-md-4
+        .col-sm-6.col-md-4{style: "display:none",id: "slide-header-two-content-two"}
           .thumbnail
             =image_tag "sliderimg2.jpg",class: "img-rounded"
             .caption
               .page-header
                 %h3= "Thumbnail Content"
               %p= "All you get is this text and a mostly barebones HTML,All you get is this text and a mostly barebones HTML,All you get is this text and a mostly barebones HTML,All you get is this text and a mostly barebones HTML,All you get is this text and a mostly barebones HTML,All you get is this text and a mostly barebones HTML,All you get is this text and a mostly barebones HTML"
-        .col-sm-6.col-md-4
+        .col-sm-6.col-md-4{style: "display:none",id: "slide-header-two-content-three"}
           .thumbnail
             =image_tag "sliderimg3.jpg",class: "img-rounded"
             .caption
@@ -89,15 +114,15 @@
       .col-md-12
         %ul
           %li
-            #medium-img-content-desc-one.content-desc-one
+            #medium-img-content-desc-one.content-desc-one{style: "display:none;"}
               %h3= "Content Heading"
               %p= "All you get is this text and a mostly barebones HTML,All you get is this text and a mostly barebones HTML,All you get is this text and a mostly barebones HTML,All you get is this text and a mostly barebones HTML,All you get is this text and a mostly barebones HTML,All you get is this text and a mostly barebones HTML,All you get is this text and a mostly barebones HTML"
           %li
-            #medium-img-content-desc-two.content-desc-three
+            #medium-img-content-desc-two.content-desc-three{style: "display:none;"}
               %h3= "Content Heading"
               %p= "All you get is this text and a mostly barebones HTML,All you get is this text and a mostly barebones HTML,All you get is this text and a mostly barebones HTML,All you get is this text and a mostly barebones HTML,All you get is this text and a mostly barebones HTML,All you get is this text and a mostly barebones HTML,All you get is this text and a mostly barebones HTML"
           %li
-            #medium-img-content-desc-three.content-desc-two
+            #medium-img-content-desc-three.content-desc-two{style: "display:none;"}
               %h3= "Content Heading"
               %p= "All you get is this text and a mostly barebones HTML,All you get is this text and a mostly barebones HTML,All you get is this text and a mostly barebones HTML,All you get is this text and a mostly barebones HTML,All you get is this text and a mostly barebones HTML,All you get is this text and a mostly barebones HTML,All you get is this text and a mostly barebones HTML"
 
